<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false" >Refresh</string>
    <string name="title_activity_detail">Forecast Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_key" translatable="false">location</string>

    <!-- Label for the Location preference [CHAR_LIMIT=30]-->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">Rehovot,IL</string>

    <!-- Label for the Location preference [CHAR_LIMIT=27]-->
    <string name="pref_units_label_metric">Metric</string>
    <!-- Label for the Location preference [CHAR_LIMIT=27]-->
    <string name="pref_units_label_imperial">Imperial</string>

    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_default" translatable="false">@string/pref_units_metric</string>

    <string name="pref_units_key" translatable="false">units</string>

    <!-- Label for the Location preference [CHAR_LIMIT=30]-->
    <string name="pref_units_label">Temperature Units</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share Weather</string>
    <string name="action_provider_class">android.support.v7.widget.ShareActionProvider</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Temperature formats -->
    <!-- Wind in mph [CHAR LIMIT=10] -->
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0<xliff:g id="temp_units">%2$s</xliff:g>
    </string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">
        Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">
        Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>
</resources>